# Roboto-SAI-Fuego

./: .dockerignore  .env.example  .gitignore  CHAT_ERROR_HANDLING_IMPROVED.md  DEPLOY_GUIDELINES.md  DEPLOY_NOW_UPDATED.md  DOCKER_RENDER_READY.md  Dockerfile  ERROR_MESSAGE_TOAST_FIX.md  FINAL_COMPLETE_SUMMARY.md  GROK_API_404_FIX.md  IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION_PLAN.md  PRODUCTION_ENDPOINTS_DOCS.md  README.md  RELEASE_NOTES.md  Tasks.md  VOICE_MODE_ERROR_FIX.md  WEEK_2_COMPLETE.md  docker-compose.yml  index.html  package-lock.json  package.json  quantum_validation.py  render.yaml  render.yml  test_async_fix.json  test_production_endpoints.py  vitest.config.ts
assets/: index-D-p2yiKw.js  index-DEO29wIn.css
backend/: .dockerignore  .gitconfig  Dockerfile  Roboto_SAI.py  advanced_emotion_simulator.py  agent_loop.py  build-log.txt  db.py  grok_llm.py  langchain_memory.py  main.py  main_modular.py  mcp_client.py  mcp_router.py  memory_system.py  migrate_legacy_memory.py  payments.py  persistent_memory_store.py  requirements.txt  start.sh  verify_grok.py
docker-backups/: README.md  docker-compose.yml  render.yaml
docs/: ARCHITECTURE.md  DATA_PROCESSING_AGREEMENT.md  DEPLOYMENT_RUNBOOK.md  INCIDENT_RESPONSE_RUNBOOK.md  MONITORING_RUNBOOK.md  PRIVACY_POLICY.md  TECHNICAL_DUE_DILIGENCE.md  THREAT_MODEL.md  USER_GUIDE.md
os-agent/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
roboto-sai-cli-new/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
roboto-sai-cli-new/src/roboto_sai_cli/: __init__.py  cli.py  evo_module.py  memory_module.py  quantum_module.py  utils.py
scripts/: probe_all.py  reassemble_model.py  remove-firewall.ps1  setup-firewall-simple.ps1  setup-firewall.ps1  validate_frontend_build.sh  verify-firewall.ps1
sdk/: package.json  (+1 more)
(+153 files in other folders)
